--- a/data/tags_all.yaml
+++ b/data/tags_all.yaml
@@ -1,9 +1,12 @@
 ---
 tags_all:
+  - another
   - aviation
   - docs
+  - hugo
   - lifehack
   - news
   - science
+  - web
 ---
 <!-- Generated automatically -->
