Added posts new

--- a/data/tags_all.yaml
+++ b/data/tags_all.yaml
@@ -2,8 +2,11 @@
 tags_all:
   - aviation
   - docs
+  - go
+  - hugo
   - lifehack
   - news
   - science
+  - web
 ---
 <!-- Generated automatically -->
